# hft-engine

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/: futures_connect_test.rs
grafana/provisioning/dashboards/: hft.yml  hft_dashboards.json
prometheus/: prometheus.yml
src/: error.rs  lib.rs  main.rs  types.rs
src/book/: mod.rs
src/command/: mod.rs
src/execution/: mod.rs
src/gateways/: mod.rs  order.rs  quote.rs
src/metrics/: mod.rs
src/mocks/: mock_venue.rs  mod.rs
src/services/: mod.rs
src/strategy/: mod.rs
src/tests/: mod.rs
src/tests/integration/: market_data_flow_tests.rs  mod.rs  order_data_flow_tests.rs
src/tests/mocks/: mock_venue.rs  mod.rs
src/tests/unit/: book_tests.rs  gateway_tests.rs  mod.rs  venue_tests.rs
src/venues/: binance.rs  example.rs  mod.rs
