[package]
name = "hft-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = "0.3"
url = "2.4"
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"
tracing = "0.1"
