[package]
name = "hft-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hft_engine"
path = "src/main.rs"

[[example]]
name = "futures_connect_test"
path = "examples/futures_connect_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = "0.3"
url = "2.4"
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"
tracing = "0.1"
dotenv = "0.15"
thiserror = "2.0.11"
rand = "0.9.0"
chrono = "0.4"
